fix(article-preview): increase line-height to prevent title cropping

--- a/src/components/article-preview/styles.module.scss
+++ b/src/components/article-preview/styles.module.scss
@@ -109,13 +109,13 @@
 
 		@include truncate_multiline_text(
 			$breakpoint: 2,
-			$lh: 1.1,
+			$lh: 1.2,
 			$min-height: true);
 
 		@include breakpoint(l) {
 			@include truncate_multiline_text(
 				$breakpoint: 1,
-				$lh: 1.1,
+				$lh: 1.2,
 				$min-height: true);
 		}
 
